Calculator microservice added & implemented to work with auth microservice (without state saving)

--- a/CalculatorMicroservice/CalculatorMicroservice/CalculatorMicroservice.csproj
+++ b/CalculatorMicroservice/CalculatorMicroservice/CalculatorMicroservice.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
   </ItemGroup>
 
 </Project>
